[project]
name = "fescobill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "google-generativeai>=0.8.4",
    "matplotlib>=3.10.0",
    "pdfplumber>=0.11.5",
    "pillow>=11.1.0",
    "pymupdf>=1.25.3",
    "pytesseract>=0.3.13",
    "streamlit>=1.42.0",
    "tools>=0.1.9",
]
